Fixed flex with the displays and added horizontal scrolling to extend limit

--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,9 @@ body{
   max-height: 700px;
   width: 45vh;
   position:fixed;
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
   left: 49%;
   top: 50%;
   transform: translate(-50%, -50%);
@@ -35,15 +38,21 @@ body{
 }
 
 #longDis, #display{
-  font-size: 5.38vh;
+  font-size: 5vh;
   width: 100%;
   height: 10%;
-  margin-top: -12%;;
+  max-height: 10%;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
   background: black;
   text-align: right;
   p{
+    position: relative;
+    bottom: 80%;
     margin-right: 5%;
     transition: color 5s;
+    z-index: 500;
   }
 }
 
@@ -55,6 +64,8 @@ body{
 
 .buttonClass{
   font-size: 3vh;
+  width: 100%;
+  height: 100%;
   font-family: serif;
   color: black;
   &:hover{
@@ -64,6 +75,8 @@ body{
 
 #clear{
   grid-area: 1 / 1 / 1 / span 3;
+  width: 100%;
+  height: 100%;
   &:hover{
     background: darken(red, 10%);
   }
@@ -71,6 +84,7 @@ body{
     background: darken(red, 17%);
   }
 }
+
 #zero{
   grid-area: 5/ 2 / 5 / 3;
 }
@@ -84,7 +98,10 @@ body{
 }
 
 #decimal{
+  width: 100%;
+  height: 100%;
   &:hover{
+    color: white;
     background: gray;
   }
   &:active{
@@ -93,10 +110,13 @@ body{
 }
 
 #equals{
+  width: 100%;
+  height: 100%;
   grid-row: 5;
   grid-column: 3 / 5;
   &:hover{
     background: darken(orange, 10%);
+    color: white;
   }
   &:active{
     background: darken(orange, 13.5%);
@@ -113,9 +133,11 @@ body{
     transition: opacity .5s, visibility .5s;
     background: #eee;
     text-align: center;
+    position: absolute;
+    bottom: -70px;
+    left: 6px;
     border-radius: 3px;
     padding: 2px 1px 1px 1px;
-    margin-top: 40px;
 }
 
 .show{
@@ -136,39 +158,21 @@ body{
         &:hover{
             box-shadow: none;
         }
-        display: flex;
     }
 
     #allButtons{
-        align-self: flex-end;
         grid-template: repeat(5, 20%)/repeat(4, 20vw);
     }
 
-    #longDis, #display{
-        font-size: 5vh;
-        min-width: 80vw;
-        height: 6vh;
-        max-height: 6vh;
-        overflow-x: scroll;
-        overflow-y: hidden;
-        margin-top: -14%;;
-        background: black;
-        text-align: right;
-        position:absolute;
-        p{
-            margin-top: .5vh;
-          margin-right: 5%;
-        }
-      }
     #longDis{
-        top: 5vh;
+        top: 9.5%;
         p{
             color: darken(orange, 10%);
         }
     }
 
     #display{
-        top: 11vh;
+        top: 19.5%;
         p{
             color: white;
         };
